# hospitations_po

./: Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
alembic/versions/: 5c103c73ff53_first_revision.py
hospitations_po/gui/: frames.py  main.py  start.py
hospitations_po/server/: alembic.ini  crud.py  database.py  main.py  models.py  schemas.py  start.py  test.py
hospitations_po/server/migrations/: env.py
hospitations_po/server/migrations/versions/: 810601fe4866_first_revions.py
tests/: db_data.py  test_hospitations_po.py  test_server.py
tests/migrations/: env.py  script.py.mako
tests/migrations/versions/: 4664efb10f26_first_revision.py  7ef3036c62a3_first_test_db_revision.py  f009f7ab89df_added_data_update.py
